--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,26 @@ ENV/
 
 # Rope project settings
 .ropeproject
+
+# LSST ignores
+*.dylib
+*.o
+*.so
+*.os
+*.pyc
+pytest_session.txt
+.cache
+/*.fits
+*_wrap.cc
+*Lib.py
+.sconf_temp
+.sconsign.dblite
+config.log
+doc/*.tag
+doc/html
+doc/doxygen.conf
+doc/xml
+python/lsst/synpipe/version.py
+tests/.tests
+tests/.cache
+ups/*.cfgc
